--- a/pages/model/custom/index.wxml
+++ b/pages/model/custom/index.wxml
@@ -1,5 +1,5 @@
 <!--pages/model/custom/index.wxml-->
-<title-bar color="{{title_color}}" isShow="{{false}}" icon_type="{{icon_type}}" bg_opacity="{{bg_opacity}}">
+<title-bar color="{{title_color}}" back="false" icon_type="{{icon_type}}" bg_opacity="{{bg_opacity}}">
   <view style="text-align: center;">发布活动</view>
 </title-bar>
 
