--- a/pages/public/public/index.wxml
+++ b/pages/public/public/index.wxml
@@ -1,115 +1,162 @@
-<!--pages/public/public/index.wxml-->
-<view class="public">
-  <view class="public_function">
-    <i-row>
-      <i-col span="8" i-class="col-class">
-        <view class="funciont_item">
-          <view class="funciont_item_img">
-            <image src="./images/icon_scan.png" mode="aspectFit"/>
+<!--pages/model/custom/index.wxml-->
+<title-bar color="{{title_color}}" icon_type="{{icon_type}}" bg_opacity="{{bg_opacity}}">
+  <view style="text-align: center;">发布活动</view>
+</title-bar>
+
+<view class="theme_pic">
+  <view class="theme_pic_frame">
+    <view class="add_pic" bindtap="addPic" wx:if="{{activity.photos.length < 9}}">
+      <image src="./images/icon_camera.png" mode="aspectFit" />
+    </view>
+    <swiper indicator-dots="true" indicator-color="rgba(255, 255, 255, 0.3)" indicator-active-color="#ffffff">
+      <block wx:if="{{activity.photos.length > 0}}">
+        <block wx:for="{{activity.photos}}" wx:key="{{item.id}}">
+          <swiper-item>
+            <view class="swiper-item">
+              <image src="{{item.path}}" mode="aspectFill"></image>
+            </view>
+          </swiper-item>
+        </block>
+      </block>
+      <block wx:else>
+        <swiper-item>
+          <view class="swiper-item">
+            <image src="../../../images/pic_01.jpg" mode="aspectFill"></image>
           </view>
-          <text>扫一扫</text>
-        </view>
-      </i-col>
-      <i-col span="8" i-class="col-class">
-        <view class="funciont_item">
-          <view class="funciont_item_img">
-            <image src="./images/icon_vote.png" mode="aspectFit"/>
-          </view>
-          <text>发布投票</text>
-        </view>
-      </i-col>
-      <i-col span="8" i-class="col-class">
-        <view class="funciont_item">
-          <view class="funciont_item_img">
-            <image src="./images/icon_statistics.png" mode="aspectFit"/>
-          </view>
-          <text>统计名单</text>
-        </view>
-      </i-col>
-    </i-row>
-  </view>
-  <view class="public_model">
-    <i-row class="public_model_row">
-      <i-col span="6" class="public_model_col">
-        <view class="model_item">
-          <view class="model_item_img">
-            <image src="./images/scene/festerval.png" mode="aspectFit"/>
-          </view>
-          <text>节日</text>
-        </view>
-      </i-col>
-      <i-col span="6">
-        <view class="model_item">
-          <view class="model_item_img">
-            <image src="./images/scene/lectures.png" mode="aspectFit"/>
-          </view>
-          <text>聚会娱乐</text>
-        </view>
-      </i-col>
-      <i-col span="6">
-        <view class="model_item">
-          <view class="model_item_img">
-            <image src="./images/scene/sports.png" mode="aspectFit"/>
-          </view>
-          <text>运动健身</text>
-        </view>
-      </i-col>
-      <i-col span="6">
-        <view class="model_item">
-          <view class="model_item_img">
-            <image src="./images/scene/travel.png" mode="aspectFit"/>
-          </view>
-          <text>出游旅行</text>
-        </view>
-      </i-col>
-      <i-col span="6">
-        <view class="model_item">
-          <view class="model_item_img">
-            <image src="./images/scene/meeting.png" mode="aspectFit"/>
-          </view>
-          <text>会议论坛</text>
-        </view>
-      </i-col>
-      <i-col span="6">
-        <view class="model_item">
-          <view class="model_item_img">
-            <image src="./images/scene/lectures.png" mode="aspectFit"/>
-          </view>
-          <text>沙龙讲座</text>
-        </view>
-      </i-col>
-      <i-col span="6">
-        <view class="model_item">
-          <view class="model_item_img">
-            <image src="./images/scene/games.png" mode="aspectFit"/>
-          </view>
-          <text>演出赛事</text>
-        </view>
-      </i-col>
-      <i-col span="6">
-        <navigator url="/pages/model/custom/index">
-          <view class="model_item">
-          <view class="model_item_img">
-            <image src="./images/scene/custom.png" mode="aspectFit"/>
-          </view>
-            <text>自定义
-          </text>
-          </view>
-        </navigator>
-      </i-col>
-    </i-row>
-  </view>
-  <view class="my_model_title">我的模板</view>
-  <view class="public_model">
-    <i-row class="public_model_row">
-      <i-col span="6" class="public_model_col">
-        <view class="model_item">
-          <view>
-            <i-icon type="add" size="40" color="#333333" />
-          </view>
-          <text>添加</text>
-        </view>
-      </i-col>
-    </i-row>
+        </swiper-item>
+      </block>
+    </swiper>
   </view>
 </view>
+
+<view class="theme_content" style="border-bottom: solid 1px #e5e5e5">
+  <view class="content_input">
+    <i-icon type="label_fill" size="24" class="input_icon" />
+    <input placeholder="活动主题（不超过35个字符）" value="{{activity.title}}" data-name="title" maxlength="35" bindinput="inputOnChange" />
+  </view>
+  <navigator url="../change-time/index?key=beginTime" class="content_input">
+    <i-icon type="time_fill" size="24" class="input_icon" /> {{activity.beginTimeStr}} 开始
+  </navigator>
+  <navigator url="../change-time/index?key=endTime" class="content_input">
+    <view class="time_picker_content" wx:if="{{activity.endTimeStr !== ''}}">
+      {{activity.endTimeStr}} 结束
+      <view class="clear_selct" catchtap="clearEndTime">
+        <icon type="clear" size="24" color="#d5d5d5" />
+      </view>
+    </view>
+    <view class="time_picker_placeholder" wx:else>活动结束时间（选填）</view>
+  </navigator>
+  <navigator url="../address-edit/index" class="content_input">
+    <i-icon type="coordinates_fill" size="24" class="input_icon" />
+    <block wx:if="{{activity.address.longAddress}}">
+      {{activity.address.longAddress}}
+    </block>
+    <block wx:else>
+      <input placeholder="活动详细地址（选填）"  />
+    </block>
+  </navigator>
+</view>
+
+<view class="theme_content">
+  <view class="theme_rich_text">
+    <textarea value="{{activity.intro}}" placeholder="输入活动介绍（选填）。详细精彩的活动描述可以吸引更多人哦" bindinput="inputOnChange" data-name="intro"></textarea>
+  </view>
+  <view class="content_input" bindtap="financialSettingVisibleChange">
+    <i-icon type="financial_fill" size="24" class="input_icon" />
+    <view class="content_cell">
+      <view class="content_cell_title">费用设置</view>
+      <block wx:if="{{activity.payPath == '0'}}">免费</block>
+      <block wx:elif="{{activity.payPath == '1'}}"></block>
+      <block wx:else>{{activity.charge ? activity.charge : 0}}元</block>
+      <!-- {{joinerNum === 0 ? "人数不限" : joinerNum}} -->
+    </view>
+  </view>
+  <radio-group wx:if="{{financialSetting}}" class="input_cell" data-name="payPath" bindchange="inputOnChange">
+    <label class="input_cell_row">
+      <view class="label">
+        <view class="input_cell_icon">
+          <i-icon type="success_fill" size="24" color="#999999" class="input_icon" wx:if="{{activity.payPath == '0'}}" />
+        </view>
+        活动免费
+      </view>
+      <view class="form_item">
+      </view>
+      <radio value="0" hidden="{{true}}"></radio>
+    </label>
+    <label class="input_cell_row">
+      <view class="label">
+        <view class="input_cell_icon">
+          <i-icon type="success_fill" size="24" color="#999999" class="input_icon" wx:if="{{activity.payPath == '1'}}" />
+        </view>
+        活动后再AA
+      </view>
+      <view class="form_item">
+      </view>
+      <radio value="1" hidden="{{true}}"></radio>
+    </label>
+    <label class="input_cell_row">
+      <view class="label">
+        <view class="input_cell_icon">
+          <i-icon type="success_fill" size="24" color="#999999" class="input_icon" wx:if="{{activity.payPath == '2'}}" />
+        </view>
+        活动现场付款
+      </view>
+      <view class="form_item">
+        <input value="{{activity.charge}}" placeholder="请输入金额" data-name="charge" bindinput="inputOnChange" wx:if="{{activity.payPath == '2'}}" />
+      </view>
+      <radio value="2" hidden="{{true}}"></radio>
+    </label>
+    <label class="input_cell_row">
+      <view class="label">
+        <view class="input_cell_icon">
+          <i-icon type="success_fill" size="24" color="#999999" class="input_icon" wx:if="{{activity.payPath == '3'}}" />
+        </view>
+        线上支付
+      </view>
+      <view class="form_item">
+        <input value="{{activity.charge}}" placeholder="限1元" data-name="charge" bindinput="inputOnChange" wx:if="{{activity.payPath == '3'}}" />
+      </view>
+      <radio value="3" hidden="{{true}}"></radio>
+    </label>
+  </radio-group>
+</view>
+<view class="theme_content">
+  <view class="content_input">
+    <i-icon type="success_fill" size="24" class="input_icon" />
+    <picker bindchange="onPickChange" data-name="publicType" value="{{activity.publicType}}" range="{{pravicy_arr}}">
+      <view class="time_picker_content">
+        {{pravicy_arr[activity.publicType]}}
+      </view>
+    </picker>
+  </view>
+</view>
+
+<view class="theme_content">
+  <view class="content_input">
+    <i-icon type="success_fill" size="24" class="input_icon" />
+    <picker bindchange="onPickChange" data-name="anonSignUp" value="{{activity.anonSignUp}}" range="{{real_name_arr}}">
+      <view class="time_picker_content">
+        {{real_name_arr[activity.anonSignUp]}}
+      </view>
+    </picker>
+  </view>
+</view>
+<view class="agreement_text">
+  <icon type="success" size="12" color="{{agree ? '#fda402' : '#d5d5d5'}}" bindtap="agreeOnChange" /> 同意
+  <text style="color:#fda402">《报名吧服务协议》</text>
+</view>
+
+<view class="theme_control">
+  <i-row>
+    <i-col span="10">
+      <button type="primary" size="mini" class="defult_btn" bindtap="seniorSetting"> 高级设置 </button>
+    </i-col>
+    <i-col span="14">
+      <button type="primary" size="mini" class="defult_btn public_btn" bindtap="ajaxPublicActivity"> 立即发布 </button>
+    </i-col>
+  </i-row>
+</view>
+
+<i-modal title="纵向排列的按钮" visible="{{ visible4 }}" actions="{{ actions4 }}" action-mode="{{ vertical }}" bind:click="handleClick4">
+
+</i-modal>
