--- a/pages/user/user/index.wxml
+++ b/pages/user/user/index.wxml
@@ -1,22 +1,43 @@
 <!--pages/user/user/index.wxml-->
 <view class="mine_page">
   <view class="mine_block">
-    <navigator url="../personal-info/index" class="personal_base_info" wx:if="{{isLogin && hasUserInfo}}">
-      <view class="personal_header_pic">
-        <image src="{{userInfo.avatarUrl}}"></image>
+    <block wx:if="{{isLogin}}">
+      <navigator url="../personal-info/index" class="personal_base_info">
+        <view class="personal_header_pic">
+          <image src="{{userInfo.headPhoto}}"></image>
+        </view>
+        <view class="personal_base_info_content">
+          <view class="name">
+            {{userInfo.username}}
+            <view class="authentication" wx:if="{{userInfo.authenticateStatus.authStatus}}">
+              <view class="icon">
+                <image src="../../../images/activities/icon_authed.png"></image>
+              </view>
+              <text wx:if="{{userInfo.authenticateStatus.authType === 1}}">个人认证</text>
+              <text wx:if="{{userInfo.authenticateStatus.authType === 2}}">企业认证</text>
+              <text wx:if="{{userInfo.authenticateStatus.authType === 3}}">组织认证</text>
+              <text wx:else>已认证</text>
+            </view>
+            <view class="authentication_disable" catchtap="" wx:else>
+              <view class="icon">
+                !
+              </view>
+              未认证
+            </view>
+          </view>
+          <view class="phoneNum">{{userInfo.telephone}}</view>
+        </view>
+      </navigator>
+    </block>
+    <block wx:else>
+      <view class="login_fram">
+        <view class="btn-area">
+          <button type="primary" size="mini" open-type="getUserInfo" bindgetuserinfo="getUserInfo">使用微信登录</button>
+        </view>
       </view>
-      <view class="personal_base_info_content">
-        <view class="name">{{userInfo.nickName}}</view>
-        <view class="phoneNum">{{userInfo.phoneNo}}</view>
-      </view>
-    </navigator>
-    <view class="login_fram" wx:else>
-      <view class="btn-area">
-        <button type="primary" size="mini" open-type="getUserInfo" bindgetuserinfo="getUserInfo">使用微信登录</button>
-      </view>
-    </view>
+    </block>
   </view>
-  <view class="input_cell">
+  <navigator url="../wallet/index" class="input_cell">
     <view class="input_cell_row">
       <view class="label is_link">
         <view class="input_cell_icon">
@@ -25,7 +46,7 @@
         我的钱包
       </view>
     </view>
-  </view>
+  </navigator>
   <view class="input_cell">
     <button class="input_cell_row" open-type="share">
       <view class="label is_link">
@@ -89,3 +110,12 @@
     </view>
   </view>
 </view>
+
+<i-modal title="需要获取您的手机号" visible="{{ getPhoneNumVisible }}" show-ok="{{false}}" show-cancel="{{false}}" actions="{{ allowActions }}">
+  <view>
+    <button size="mini" bindtap="alertHidden" style="margin-right: 20rpx">
+      取消
+    </button>
+    <button type="primary" size="mini" open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber" binderror="openTypeError">允许</button>
+  </view>
+</i-modal>
