--- a/pages/public/public/index.wxml
+++ b/pages/public/public/index.wxml
@@ -13,7 +13,7 @@
         <block wx:for="{{activity.photos}}" wx:key="{{item.id}}">
           <swiper-item>
             <view class="swiper-item">
-              <image src="{{item.path}}" mode="aspectFill"></image>
+              <image src="{{item.path}}" mode="aspectFit"></image>
             </view>
           </swiper-item>
         </block>
