--- a/pages/activities/activity-details/index.wxss
+++ b/pages/activities/activity-details/index.wxss
@@ -424,3 +424,109 @@ page {
   border-radius: 4rpx;
   background: #ffffff;
 }
+
+
+.cover_view {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background: rgba(0,0,0,0.3);
+}
+.show_qr_code_frame {
+  width: 580rpx;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-left: -290rpx;
+  transform: translateY(-50%);
+  background: #ffffff;
+  padding: 30rpx 60rpx;
+}
+
+.show_qr_code_image {
+  height: 460rpx;
+  margin-bottom: 20rpx;
+}
+
+.show_qr_code_tips {
+  line-height: 36rpx;
+  font-size: 28rpx;
+  color: #999999;
+  text-align: center;
+}
+
+.manage_btn {
+  width: 690rpx;
+  margin: 60rpx auto;
+  height: 90rpx;
+  border-radius: 8rpx;
+  text-align: center;
+  line-height: 90rpx;
+  color: #ffffff;
+  font-size: 32rpx;
+  background: #f45051;
+}
+
+.disabled {
+  background: #cccccc;
+  color: #ffffff;
+  border: solid 1rpx #cccccc;
+}
+
+.cancel_frame{
+  width: 580rpx;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-left: -290rpx;
+  transform: translateY(-50%);
+  background: #ffffff;
+  border-radius: 12rpx;
+  overflow: hidden;
+}
+.cover_view_title {
+  height: 90rpx;
+  line-height: 90rpx;
+  padding: 0 30rpx;
+  font-size: 28rpx;
+  color: #333333;
+  border-bottom: solid 1rpx #e5e5e5;
+}
+
+.cancel_cover_content {
+  padding: 30rpx;
+}
+
+.cancel_input {
+  height: 90rpx;
+  border: solid 1rpx #e5e5e5;
+  padding: 19rpx 15rpx;
+}
+.cancel_input input {
+  height: 50rpx;
+  line-height: 50rpx;
+}
+
+.cover_control {
+  height: 81rpx;
+  display: flex;
+  justify-content: space-between;
+  border-top:  solid 1rpx #e5e5e5;
+}
+
+.cover_cancel_btn {
+  width: 50%;
+  border-left: solid 1rpx #e5e5e5;
+  text-align: center;
+  height: 80rpx;
+  line-height: 80rpx;
+  color: #999999;
+}
+
+.cover_btn_cancel {
+  border-left: none;
+  color: #ffa404;
+  font-weight: bold;
+}
