--- a/pages/home/home/index.wxml
+++ b/pages/home/home/index.wxml
@@ -16,12 +16,12 @@
       <view class="active_sponsor">{{item.organizer}}</view>
       <view class="active_info">
         <view class="active_info_item">
-          <i-icon type="coordinates" color="#999999" size="12"/>
-          {{item.city}}
+          <i-icon type="coordinates" color="#999999" size="24"/>
+          <view class="text">{{item.city ? item.city : '不限'}}</view>
         </view>
         <view class="active_info_item">
-          <i-icon type="time" color="#999999" size="12"/>
-          {{item.updateTime}}
+          <i-icon type="time" color="#999999" size="24"/>
+          <view class="text">{{item.updateTime}}</view>
         </view>
         <view class="active_info_item" style="text-align:center">
           <text>{{item.signUpTotal}}</text>报名
