--- a/pages/home/home/index.wxss
+++ b/pages/home/home/index.wxss
@@ -75,7 +75,12 @@ page{
   line-height: 30rpx;
   color: #999999;
   font-size: 20rpx;
+  display: flex;
+  align-items: center;
 }
 .active_info .active_info_item text {
   color: #ff711b;
+}
+.active_info .active_info_item .text {
+  margin-left: 10rpx;
 }
