--- a/pages/hot/hot.wxml
+++ b/pages/hot/hot.wxml
@@ -19,12 +19,12 @@
       <view class="active_sponsor">主办方：{{item.username}}</view>
       <view class="active_info">
         <view class="active_info_item">
-          <i-icon type="coordinates" color="#999999" size="12"/>
-          {{item.addressShort}}
+          <i-icon type="coordinates" color="#999999" size="24"/>
+          <view class="text">{{item.addressShort ? item.addressShort : '不限'}}</view>
         </view>
         <view class="active_info_item">
-          <i-icon type="time" color="#999999" size="12"/>
-          {{item.dayStr}}
+          <i-icon type="time" color="#999999" size="24"/>
+          <view class="text">{{item.dayStr}}</view>
         </view>
         <view class="active_info_item" style="text-align:center">
           <text>{{item.signUpCount}}</text>报名
