--- a/pages/model/seniorSetting/index.wxml
+++ b/pages/model/seniorSetting/index.wxml
@@ -11,7 +11,7 @@
         </view>
         <view class="select_tag_item">
           <view class="tag" bindtap="editMoreInfo">
-            <i-icon type="add" color="#d5d5d5" size="24" />
+            <i-icon type="add" color="#d5d5d5" size="30" />
           </view>
         </view>
       </view>
@@ -77,5 +77,5 @@
       </view>
     </view>
   </view> -->
-  <!-- <view class="submit_btn" bindtap="submitSeniorSetting">确定</view> -->
+  <view class="submit_btn" bindtap="submitSeniorSetting">确定</view>
 </view>
