--- a/app.wxss
+++ b/app.wxss
@@ -50,6 +50,24 @@ page .i-icon {
   background: #ffffff;
 }
 
+.input_cell .input_cell_rich_row {
+  border-bottom: solid 1px #e5e5e5;
+  padding: 20rpx 0;
+  position: relative;
+}
+
+.input_cell .input_cell_rich_row .label {
+  font-size: 28rpx;
+  line-height: 40rpx;
+  height: 40rpx;
+  color: #333;
+  margin-bottom: 10rpx;
+}
+
+.input_cell .input_cell_rich_row .content {
+  position: relative;
+}
+
 .input_cell .input_cell_row:last-child {
   border-bottom: none;
 }
